tests/ui/closures/2229_closure_analysis/capture-disjoint-field-struct.stderr
error: First Pass analysis includes:
  --> $DIR/capture-disjoint-field-struct.rs:14:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", p.x);
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> Immutable
  --> $DIR/capture-disjoint-field-struct.rs:17:24
   |
LL |         println!("{}", p.x);
   |                        ^^^

error: Min Capture analysis includes:
  --> $DIR/capture-disjoint-field-struct.rs:14:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", p.x);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[(0, 0)] -> Immutable
  --> $DIR/capture-disjoint-field-struct.rs:17:24
   |
LL |         println!("{}", p.x);
   |                        ^^^

error: aborting due to 2 previous errors

